[package]
name = "salad"
description = "Salad generates random passphrases from a word-list for *nix systems"
version = "0.2.1"
authors = ["crawlingChaos"]
edition = "2018"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/crawlingChaos/salad"
repository = "https://github.com/crawlingChaos/salad"
readme = "README.md"

[dependencies]
